--- a/NFApp1/packages.config
+++ b/NFApp1/packages.config
@@ -3,11 +3,13 @@
   <package id="nanoFramework.CoreLibrary" version="1.12.0" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32" version="1.4.8" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32.Rmt" version="1.3.3" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Iot.Device.Ccs811" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Iot.Device.Dhtxx.Esp32" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Json" version="2.2.63" targetFramework="netnano1.0" />
   <package id="nanoFramework.M2Mqtt" version="5.1.44" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Events" version="1.11.1" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Native" version="1.5.4" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Buffers.Binary.BinaryPrimitives" version="1.2.82" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Collections" version="1.4.0" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.I2c" version="1.0.3" targetFramework="netnano1.0" />
@@ -25,6 +27,9 @@
   <package id="nanoFramework.WebServer" version="1.1.47" targetFramework="netnano1.0" />
   <package id="nanoFramework.Windows.Storage" version="1.5.24" targetFramework="netnano1.0" />
   <package id="nanoFramework.Windows.Storage.Streams" version="1.14.19" targetFramework="netnano1.0" />
+  <package id="UnitsNet.nanoFramework.ElectricCurrent" version="4.145.0" targetFramework="netnano1.0" />
+  <package id="UnitsNet.nanoFramework.Length" version="4.145.0" targetFramework="netnano1.0" />
   <package id="UnitsNet.nanoFramework.RelativeHumidity" version="4.145.0" targetFramework="netnano1.0" />
   <package id="UnitsNet.nanoFramework.Temperature" version="4.145.0" targetFramework="netnano1.0" />
+  <package id="UnitsNet.nanoFramework.VolumeConcentration" version="4.145.0" targetFramework="netnano1.0" />
 </packages>
