--- a/NFApp1/packages.config
+++ b/NFApp1/packages.config
@@ -6,10 +6,11 @@
   <package id="nanoFramework.Iot.Device.Ccs811" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Iot.Device.Dhtxx.Esp32" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Json" version="2.2.63" targetFramework="netnano1.0" />
-  <package id="nanoFramework.M2Mqtt" version="5.1.44" targetFramework="netnano1.0" />
+  <package id="nanoFramework.M2Mqtt" version="5.1.48" targetFramework="netnano1.0" />
+  <package id="nanoFramework.ResourceManager" version="1.2.7" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Events" version="1.11.1" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Native" version="1.5.4" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.Buffers.Binary.BinaryPrimitives" version="1.2.82" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Buffers.Binary.BinaryPrimitives" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Collections" version="1.4.0" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Gpio" version="1.1.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.I2c" version="1.0.3" targetFramework="netnano1.0" />
@@ -17,7 +18,7 @@
   <package id="nanoFramework.System.Device.Spi" version="1.3.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.37" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.141" targetFramework="netnano1.0" />
-  <package id="nanoFramework.System.IO.FileSystem" version="1.1.11" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.FileSystem" version="1.1.15" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Streams" version="1.1.27" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Math" version="1.5.15" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net" version="1.10.38" targetFramework="netnano1.0" />
