--- a/NFApp1/packages.config
+++ b/NFApp1/packages.config
@@ -3,6 +3,7 @@
   <package id="nanoFramework.CoreLibrary" version="1.12.0" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32" version="1.4.8" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32.Rmt" version="1.3.3" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Iot.Device.Apa102" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Iot.Device.Ccs811" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Iot.Device.Dhtxx.Esp32" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.Json" version="2.2.63" targetFramework="netnano1.0" />
@@ -18,6 +19,7 @@
   <package id="nanoFramework.System.Device.Spi" version="1.3.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.37" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Diagnostics.Stopwatch" version="1.2.141" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Drawing" version="1.2.141" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.FileSystem" version="1.1.15" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Streams" version="1.1.27" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Math" version="1.5.15" targetFramework="netnano1.0" />
